--- a/pom.xml
+++ b/pom.xml
@@ -7,19 +7,31 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<name>spring-security-jwt</name>
 	<description>Spring Auth with JWT</description>
+
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<maven.compiler.source>1.8</maven.compiler.source>
 		<maven.compiler.target>1.8</maven.compiler.target>
 	</properties>
+
+	<distributionManagement>
+		<repository>
+		<id>github</id>
+		<name>GitHub Packages</name>
+		<url>https://maven.pkg.github.com/andreasbehnke/maven</url>
+		</repository>
+	</distributionManagement>
+
 	<dependencies>
 		
+		<!-- spring boot -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-autoconfigure</artifactId>
 			<version>2.6.1</version>
 		</dependency>
 		
+		<!-- spring framework -->
 		<dependency>
 			<groupId>org.springframework.security</groupId>
 			<artifactId>spring-security-web</artifactId>
@@ -31,12 +43,14 @@
 			<version>5.3.13</version>
 		</dependency>
 
+		<!-- technology libraries -->
 		<dependency>
 			<groupId>io.jsonwebtoken</groupId>
 			<artifactId>jjwt</artifactId>
 			<version>0.9.1</version>
 		</dependency>
 
+		<!-- API's -->
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-api</artifactId>
@@ -53,6 +67,7 @@
 			<version>3.1.0</version>
 		</dependency>
 
+		<!-- test dependencies -->
 		<dependency>
 			<groupId>org.junit.jupiter</groupId>
 			<artifactId>junit-jupiter-api</artifactId>
